--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-slate
 title: Shelby Doty
-permalink: /:title/
+url: "https://sdoty4.github.io"
+navbar-links:
+  About Me: "aboutme"
